--- a/src/content/blog/2025/09/'1'.md
+++ b/src/content/blog/2025/09/'1'.md
@@ -4,7 +4,7 @@ categories: 分类
 tags: ['标签']
 id: "94ac8a5770471153"
 date: 2025-09-07 10:05:06
-cover: "封面图URL (为空默认随机内置封面 /public/assets/images/banner)"
+cover: ""
 ---
 
 :::note
