--- a/src/content/blog/2025/09/1.md
+++ b/src/content/blog/2025/09/1.md
@@ -1,8 +1,8 @@
 ---
-title: "'1'"
+title: "1"
 categories: 分类
 tags: ['标签']
-id: "94ac8a5770471153"
+id: "1"
 date: 2025-09-07 10:05:06
 cover: ""
 ---
