--- a/src/content/blog/1.md
+++ b/src/content/blog/1.md
@@ -3,7 +3,6 @@ title: 模板
 categories: 模板
 tags:
   - test1
-  - test2
 id: test
 date: 2025-09-20 22:13:21 #2025年9月20日22:14:29
 updated: 2025-09-20 22:13:24 #2025年9月20日22:14:32
@@ -12,3 +11,5 @@ recommend: true # 是否推荐文章
 top: false # 是否置顶文章
 hide: false # 是否隐藏文章
 ---
+模板
+test
