--- a/src/content/blog/1.md
+++ b/src/content/blog/1.md
@@ -1,9 +1,9 @@
 ---
-title: 阿萨德 # 标题
-categories: 啊啊啊 # 分类
+title: test # 标题
+categories: test # 分类
 tags: 
   - test1 # 标签
-id: 当当 # 唯一ID
+id: test # 唯一ID
 date: 2025-10-19 16:26:21 # 创建时间
 updated: 2025-10-19 16:26:21 # 更新时间
 cover: "" # 封面图URL (为空默认随机内置封面 /public/assets/images/banner)
